--- a/exercice4.html
+++ b/exercice4.html
@@ -14,41 +14,42 @@
 
 <body>
   <div class="container-fluid ">
-  <div class="row  justify-content-center">
-    <div class="col-auto">
-      <div class="card " style="width: 18rem;">
-        <div class="card-body ">
-          <h3 class="card-title">La Manu Le Havre</h3>
-          <p class="card-text">Ecole des métiers du numérique.</p>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            + d'info
-          </button>
+    <div class="row  justify-content-center">
+      <div class="col-auto">
+        <div class="card " style="width: 18rem;">
+          <div class="card-body ">
+            <h3 class="card-title">La Manu Le Havre</h3>
+            <p class="card-text">Ecole des métiers du numérique.</p>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              + d'info
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">La Manu Le Havre</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  https://lamanu.fr/le-havre
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal"> X Fermer</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">La Manu Le Havre</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        https://lamanu.fr/le-havre
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"> X Fermer</button>
       </div>
     </div>
-  </div>
-</div>
-      </div>
-    </div>
-  </div>
 
 
-</div>
+  </div>
 
 
   <!-- Optional JavaScript -->
