--- a/exercice4.html
+++ b/exercice4.html
@@ -16,38 +16,37 @@
   <div class="container-fluid ">
     <div class="row  justify-content-center">
       <div class="col-auto">
-        <div class="card " style="width: 18rem;">
+        <div class="card text-center " style="width: 18rem;">
           <div class="card-body ">
-            <h3 class="card-title">La Manu Le Havre</h3>
+            <p class="card-title h3">La Manu Le Havre</p>
             <p class="card-text">Ecole des métiers du numérique.</p>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-              + d'info
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> + d'info
             </button>
           </div>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">La Manu Le Havre</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  https://lamanu.fr/le-havre
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal"> X Fermer</button>
-                </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="lienVersLaManu"
+          aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <p class="modal-title h5">La Manu Le Havre</p>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body bg-primary text-white text-center">
+                https://lamanu.fr/le-havre
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"> X Fermer</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
 
   </div>
 
