--- a/Exercice CV/indexCV.html
+++ b/Exercice CV/indexCV.html
@@ -9,30 +9,96 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Script&family=Syne+Tactile&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="titre text-center">
-            <h1> Brice Briere</h1>
-            <h2> Développeur Web/Web Mobile</h2>
+    <div class="container-fluid container-fix">
+        <div class="titre text-center pt-5">
+            <h1 class="Name mt-3"> Brice Briere</h1>
+            <hr class="bar">
+            <h2 class="Name m-0"> Développeur Web/Web Mobile</h2>
         </div>
-        <div class="text-center">
-            <nav id="Menu">
-                <div class="menu-button row text-center">
-                    <li>à propos</a></li>
-                    <li>compétences</a></li>
-                    <li>réalisations</a></li>
-                    <li>expérience</a></li>
-                    <li>diplômes</a></li>
-                    <li>intérêts</a></li>
-                    <li>contact</a></li>
-                    </ul>
-            </nav>
+        <div class="navbar justify-content-center sticky-top">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Expercience</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">compétences</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">réalisations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">diplômes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">intérêts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">contact</a>
+                </li>
+            </ul>
+
         </div>
-        
+        <section class="curved">
+            <div class="competences">
+                <p class="text-center mt-5 mb-5 h2"> Compétences</p>
+                <div class="row text-center">
+                    <div class="col m-2">
+                        <i class="fas fa-spinner fa-spin h3"></i>
+                        <li class="h4 m-2"> Back-end</li>
+                        <li>Pour le moment RIEN ^^</li>
+                        <li>Toujour RIEN X)</li>
+                        <hr class="bar-bleu">
+                    </div>
+                    <div class="col m-2">
+                        <ul>
+                            <i class="fas fa-circle-notch fa-spin h3"></i>
+                            <li class="h4 m-2">Front-end </li>
+                            <li class="m-1">HTML</li>
+                            <li class="m-1">CSS</li>
+                            <li>Bootstrap</li>
+                            <li>JavaScript</li>
+                            <hr class="bar-violet">
+                        </ul>
+                    </div>
+                    <div class="col m-2">
+                        <ul>
+                            <i class="fas fa-cog fa-spin h3"></i>
+                            <li class="h4 m-2">Extra</li>
+                            <li>Worpress</li>
+                            <li>Formation Google SEA</li>
+                            <li>Certification Google "Fondamentaux du marketing digital"</li>
+                            <hr class="bar-orange">
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div>
+            <p class="text-center mt-5 mb-5 h2"> Mes Expercience</p>
+        </div>
+        <div>
+            <p class="text-center mt-5 mb-5 h2"> Mes réalisations</p>
+        </div>
+        <div>
+            <p> Mes réalisations</p>
+        </div>
+        <div>
+            <p> Mes réalisations</p>
+        </div>
+        <div>
+            <p> Mes réalisations</p>
+        </div>
+        <div>
+            <p> Mes réalisations</p>
+        </div>
     </div>
 
     </div>
